--- a/_data/people.yml
+++ b/_data/people.yml
@@ -80,8 +80,8 @@ profJames:
 2019subong:
     display_name: "장수봉 (Subong Jang)"
     role: alum
-    bio: "MSc, 2019: A Study on Internet of Things (IoT) Forensics: Smart Home IoT Data Acquisition Procedure"
-    image:
+    bio: "MSc, 2019: <a href='/pubs/2019-A_Study_on_Internet_of_Things_Forensics-Subong-Thesis.pdf'>A Study on Internet of Things (IoT) Forensics: Smart Home IoT Data Acquisition Procedure</a>"
+    image: /img/people/Subong.jpg
 
 2019betty:
     display_name: "Ajayi Betty Bukola"
@@ -107,6 +107,11 @@ ugrad001:
 
 ugrad002:
     display_name: "김기철"
+    role: ugrad
+    bio: "Intelligent digital investigation tools"
+
+ugrad007:
+    display_name: "유혜민"
     role: ugrad
     bio: "Intelligent digital investigation tools"
 
