--- a/_data/people.yml
+++ b/_data/people.yml
@@ -68,25 +68,26 @@ profJames:
 2019yohannes:
     display_name: "Yohannes Yemane Brhan"
     role: alum
-    bio: "MSc, 2019: API-based Cloud Data Acquisition and Analysis from Smart Home IoT Devices"
-    image:
+    bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Yohannes-API_Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments.pdf'>API-based Cloud Data Acquisition and Analysis from Smart Home IoT Devices</a>"
+    image: /img/people/Yohannes.jpg
+    webpage: "https://www.linkedin.com/in/yohannes-yemane-brhan-70433470"
 
 2019addisu:
     display_name: "Birhanu Addisu Afework"
     role: alum
-    bio: "MSc, 2019: <a href='/pubs/2019-Smart_Home_IoT_Forensics-Addisu-Thesis.pdf'>Smart Home IoT Forensics: Study on Data Security and Challenges to Data Acquisition</a>"
+    bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Addisu-Smart_Home_IoT_Forensics.pdf'>Smart Home IoT Forensics: Study on Data Security and Challenges to Data Acquisition</a>"
     image: /img/people/Addisu.jpg
 
 2019subong:
     display_name: "장수봉 (Subong Jang)"
     role: alum
-    bio: "MSc, 2019: <a href='/pubs/2019-A_Study_on_Internet_of_Things_Forensics-Subong-Thesis.pdf'>A Study on Internet of Things (IoT) Forensics: Smart Home IoT Data Acquisition Procedure</a>"
+    bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Subong-A_Study_on_Internet_of_Things_Forensics.pdf'>A Study on Internet of Things (IoT) Forensics: Smart Home IoT Data Acquisition Procedure</a>"
     image: /img/people/Subong.jpg
 
 2019betty:
     display_name: "Ajayi Betty Bukola"
     role: alum
-    bio: "MSc, 2019: A Study on MLA Request Effectiveness on Cybercrime Investigation in Nigeria: Policy Recommendations to Improve MLA Effectiveness"
+    bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Betty-A_Study_on_MLA_Request_Effectiveness.pdf'>A Study on MLA Request Effectiveness on Cybercrime Investigation in Nigeria: Policy Recommendations to Improve MLA Effectiveness</a>"
     image:
     
 collab001:
