change hallym link add alex photo

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -53,7 +53,7 @@ profJames:
     display_name: "Alex Ocheme Ogbole"
     role: grad
     bio: "IoT Digital Forensic Investigation"
-    image:
+    image: /img/people/Alex.jpg
 
 2019jian:
     display_name: "홍지안 (Jian Hong)"
