--- a/_data/people.yml
+++ b/_data/people.yml
@@ -90,6 +90,15 @@ profJames:
     bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Betty-A_Study_on_MLA_Request_Effectiveness.pdf'>A Study on MLA Request Effectiveness on Cybercrime Investigation in Nigeria: Policy Recommendations to Improve MLA Effectiveness</a>"
     image: /img/people/Betty.jpg
     webpage: "https://www.linkedin.com/in/betty-bukola-ajayi-9033b99a/"
+
+2017Kyoungjae:
+    display_name: "박경재 (KyoungJae Park)"
+    role: alum
+    bio: "MSc, 2020 (Expected)"
+    image: /img/people/Kyoungjae.jpg
+    webpage: "https://www.linkedin.com/in/kyoungjae-park-759119aa/"
+
+     
     
 collab001:
     display_name: "Hancom GMD"
