--- a/_data/people.yml
+++ b/_data/people.yml
@@ -100,19 +100,24 @@ profJames:
 
      
     
-collab001:
+HancomGMD:
     display_name: "Hancom GMD"
     role: collab
     webpage: "https://www.hancomgmd.com"
-    bio: "IRONSTONE IoT Forensics"
     image: /img/people/GMD.png
 
-collab002:
+HappyMaru:
     display_name: "행복마루컨설팅 (Happy Maru Consulting, Inc.)"
     role: collab
     webpage: "http://hmconsulting.co.kr"
     bio: "Digital Investigation Research and Development Center(이하 DIRC)"
     image: /img/people/HMConsulting.png
+
+VUTBR:
+    display_name: "Brno University of Technology"
+    role: collab
+    webpage: "https://www.vutbr.cz/en"
+    image: "/img/people/vutbr.jpg"
 
 ugrad001:
     display_name: "고서정"
