add social icons

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -71,6 +71,7 @@ profJames:
     bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Yohannes-API_Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments.pdf'>API-based Cloud Data Acquisition and Analysis from Smart Home IoT Devices</a>"
     image: /img/people/Yohannes.jpg
     webpage: "https://www.linkedin.com/in/yohannes-yemane-brhan-70433470"
+    linkedin: "https://www.linkedin.com/in/yohannes-yemane-brhan-70433470"
 
 2019addisu:
     display_name: "Birhanu Addisu Afework"
