--- a/_config.yml
+++ b/_config.yml
@@ -53,3 +53,6 @@ navigation:
     link: /resources
   - title: "<span class='fab fa-github fa-lg'></span>"
     link: "https://github.com/LIFSHallym"
+
+plugins:
+  - jekyll-sitemap
