--- a/_data/people.yml
+++ b/_data/people.yml
@@ -143,7 +143,7 @@ ugrad007:
     display_name: "유혜민"
     role: ugrad
     bio: "Intelligent digital investigation tools"
-    image: /image/people/Angela.jpg"
+    image: /img/people/Angela.jpg"
     webpage: "https://brandmyselfdf.blogspot.com/"
 
 ugrad003:
