update terry social

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -56,6 +56,8 @@ profJames:
     bio: "IoT Digital Forensic Investigation"
     image: /img/people/Terrence.png
     linkedin: https://www.linkedin.com/in/terrence-nemayire-3b944b18b
+    twitter: "https://twitter.com/terrynema"
+    github: "https://github.com/terrynema04"
 
 2018alex:
     display_name: "Alex Ocheme Ogbole"
