--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,18 +1,18 @@
 
 profPark:
-    display_name: "박노섭"
+    display_name: "Ro Seop, Park"
     role: faculty
-    image: https://english.hallym.ac.kr/dam/jcr:1d35ca55-1461-4b7f-af9c-2babb71da279/%EB%B0%95%EB%85%B8%EC%84%AD.png
+    image: /img/people/Roseop.png
     bio: "Professor"
 
 profAhn:
-    display_name: "안정민"
+    display_name: "Jung Mihn Jamie, Ahn"
     role: faculty
     image: https://english.hallym.ac.kr/dam/jcr:8b34ae98-47a1-47fd-81ab-a9429a6bfa54/%EC%95%88%EC%A0%95%EB%AF%BC.png
     bio: "Professor"
 
 profJang:
-    display_name: "장윤식"
+    display_name: "Yun Sik, Jang"
     role: faculty
     image: https://english.hallym.ac.kr/dam/jcr:59382055-0b7a-472a-a5a9-d41a982e06e5/%EC%9E%A5%EC%9C%A4%EC%8B%9D.png
     bio: "Professor"
@@ -32,22 +32,45 @@ profJang:
     display_name: "원광재 (Gwang Jae Won)"
     role: grad
     bio: "AI-based Crime Investigation System"
-    image: /img/people/Minjin.jpg
+    image: /img/people/Gwangjae.jpg
     linkedin: https://www.linkedin.com/in/min-jin-park-07719917a/
 
-2022yuna:
+2020yuna:
     display_name: "이유나 (Yu Na Lee)"
     role: grad
     bio: "AI-based Crime Investigation System"
     image: /img/people/Minjin.jpg
     linkedin: https://www.linkedin.com/in/min-jin-park-07719917a/
 
-2022ari:
+2021ari:
     display_name: "최아리 (A Ri Choi)"
     role: grad
     bio: "AI-based Crime Investigation System"
     image: /img/people/Minjin.jpg
     linkedin: https://www.linkedin.com/in/min-jin-park-07719917a/
+
+2021yeri:
+    display_name: "구예리 (Ye Ri Gu)"
+    role: grad
+    bio: "AI-based Crime Investigation System"
+    image: /img/people/Yeri.jpg
+    linkedin: https://www.linkedin.com/in/min-jin-park-07719917a/
+
+2022yeri:
+    display_name: "박지원 (Ji Won Park)"
+    role: grad
+    bio: "AI-based Crime Investigation System"
+    image: /img/people/Yeri.jpg
+    linkedin: https://www.linkedin.com/in/min-jin-park-07719917a/
+
+
+2022yerin:
+    display_name: "박예린 (Ye Rin Park)"
+    role: grad
+    bio: "AI-based Crime Investigation System"
+    image: /img/people/Yerin.jpg
+    linkedin: https://www.linkedin.com/in/min-jin-park-07719917a/
+
 
 2023keecheol:
     display_name: "김기철 (Kee Cheol Kim)"
@@ -55,6 +78,54 @@ profJang:
     bio: "AI-based Crime Investigation System"
     linkedin: "https://www.linkedin.com/in/kee-cheol-kim-682212120/"
     image: /img/people/KeeCheol.jpg
+
+2023keecheol:
+    display_name: "이진헌 (Jin Heon Lee)"
+    role: grad
+    bio: "AI-based Crime Investigation System"
+    linkedin: "https://www.linkedin.com/in/kee-cheol-kim-682212120/"
+    image: /img/people/KeeCheol.jpg
+
+
+2019yoonjun:
+    display_name: "이윤정 (Yoonjung Lee)"
+    role: alum
+    bio: "Ph.D., 2019: 형사재판에서 판결전 재범위험성 정보제공이 유무죄 판단에 미치는 영향 - 사이코패스 선별도구 PCL-R 을 중심으로"
+
+2019yohannes:
+    display_name: "Yohannes Yemane Brhan"
+    role: alum
+    bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Yohannes-API_Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments.pdf'>API-based Cloud Data Acquisition and Analysis from Smart Home IoT Devices</a>"
+    image: /img/people/Yohannes.jpg
+    linkedin: "https://www.linkedin.com/in/yohannes-yemane-brhan-70433470"
+
+2019addisu:
+    display_name: "Birhanu Addisu Afework"
+    role: alum
+    bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Addisu-Smart_Home_IoT_Forensics.pdf'>Smart Home IoT Forensics: Study on Data Security and Challenges to Data Acquisition</a>"
+    image: /img/people/Addisu.jpg
+    linkedin: https://www.linkedin.com/in/addisu-afework-4434831a
+
+2019subong:
+    display_name: "장수봉 (Subong Jang)"
+    role: alum
+    bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Subong-A_Study_on_Internet_of_Things_Forensics.pdf'>A Study on Internet of Things (IoT) Forensics</a>"
+    image: /img/people/Subong.jpg
+    linkedin: https://kr.linkedin.com/in/subong-jang-54779aab
+
+2019betty:
+    display_name: "Ajayi Betty Bukola"
+    role: alum
+    bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Betty-A_Study_on_MLA_Request_Effectiveness.pdf'>A Study on MLA Request Effectiveness on Cybercrime Investigation in Nigeria</a>"
+    image: /img/people/Betty.jpg
+    linkedin: "https://www.linkedin.com/in/betty-bukola-ajayi-9033b99a/"
+
+2017Kyoungjae:
+    display_name: "박경재 (KyoungJae Park)"
+    role: alum
+    bio: "MSc, 2020 (Expected)"
+    image: /img/people/Kyoungjae.jpg
+    linkedin: "https://www.linkedin.com/in/kyoungjae-park-759119aa/"
 
 2018minjin:
     display_name: "박민진 (Min Jin Park)"
@@ -107,45 +178,6 @@ profJang:
     image: /img/people/Tony.jpg
     linkedin: https://linkedin.com/in/tonyjokeapart
 
-2019yoonjun:
-    display_name: "이윤정 (Yoonjung Lee)"
-    role: alum
-    bio: "Ph.D., 2019: 형사재판에서 판결전 재범위험성 정보제공이 유무죄 판단에 미치는 영향 - 사이코패스 선별도구 PCL-R 을 중심으로"
-
-2019yohannes:
-    display_name: "Yohannes Yemane Brhan"
-    role: alum
-    bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Yohannes-API_Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments.pdf'>API-based Cloud Data Acquisition and Analysis from Smart Home IoT Devices</a>"
-    image: /img/people/Yohannes.jpg
-    linkedin: "https://www.linkedin.com/in/yohannes-yemane-brhan-70433470"
-
-2019addisu:
-    display_name: "Birhanu Addisu Afework"
-    role: alum
-    bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Addisu-Smart_Home_IoT_Forensics.pdf'>Smart Home IoT Forensics: Study on Data Security and Challenges to Data Acquisition</a>"
-    image: /img/people/Addisu.jpg
-    linkedin: https://www.linkedin.com/in/addisu-afework-4434831a
-
-2019subong:
-    display_name: "장수봉 (Subong Jang)"
-    role: alum
-    bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Subong-A_Study_on_Internet_of_Things_Forensics.pdf'>A Study on Internet of Things (IoT) Forensics</a>"
-    image: /img/people/Subong.jpg
-    linkedin: https://kr.linkedin.com/in/subong-jang-54779aab
-
-2019betty:
-    display_name: "Ajayi Betty Bukola"
-    role: alum
-    bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Betty-A_Study_on_MLA_Request_Effectiveness.pdf'>A Study on MLA Request Effectiveness on Cybercrime Investigation in Nigeria</a>"
-    image: /img/people/Betty.jpg
-    linkedin: "https://www.linkedin.com/in/betty-bukola-ajayi-9033b99a/"
-
-2017Kyoungjae:
-    display_name: "박경재 (KyoungJae Park)"
-    role: alum
-    bio: "MSc, 2020 (Expected)"
-    image: /img/people/Kyoungjae.jpg
-    linkedin: "https://www.linkedin.com/in/kyoungjae-park-759119aa/"
 
 HancomGMD:
     display_name: "Hancom GMD"
