--- a/_data/people.yml
+++ b/_data/people.yml
@@ -78,7 +78,7 @@ profJang:
     image: /img/people/KeeCheol.jpg
     linkedin: "https://www.linkedin.com/in/kee-cheol-kim-682212120/"
 
-2023keecheol:
+2023jinheon:
     display_name: "이진헌 (Jin Heon Lee)"
     role: grad
     bio: "AI-based Crime Investigation System"
