--- a/_data/people.yml
+++ b/_data/people.yml
@@ -4,6 +4,7 @@ profPark:
     role: faculty
     image: /img/people/Roseop.png
     bio: "Professor"
+    email: "rspark@hallym.ac.kr"
 
 profAhn:
     display_name: "Jung Mihn Jamie, Ahn"
