updated publications page

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -129,21 +129,21 @@ profJang:
 2018minjin:
   display_name: "박민진 (Min Jin, Park)"
   role: alum
-  bio: "IoT Digital Forensic Investigation"
+  bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Minjin-A_Study_on_the_malicious_targeting_of_IoT_devices.pdf</a>"
   image: /img/people/Minjin.jpg
   linkedin: https://www.linkedin.com/in/min-jin-park-07719917a/
 
 2018jiyoon:
   display_name: "함지윤 (Jiyoon, Ham)"
   role: alum
-  bio: "Intelligent digital investigation tools"
+  bio: "MSc, 2019: <a href='/pubs/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools.pdf</a>"
   image: /img/people/Jiyoon.jpg
   linkedin: https://www.linkedin.com/in/jiyoon-ham-9a41a017a
 
 2019sungmi:
   display_name: "박성미 (Sungmi, Park)"
   role: alum
-  bio: "Expert systems in digital investigations and law"
+  bio: "MSc, 2019: <a href='/pubs/2021-Thesis-MSc-Sungmi-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining.pdf</a>"
   image: /img/people/Sungmi.jpg
   linkedin: https://www.linkedin.com/in/sungmi-park-5560b0147
 
